test/scc/expr/semantic-errors/142.a
142.t:9:9: error: initializer element is not constant